mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/inheritance/virtual/modifier_virtual_err.sol
library test {
    modifier m virtual;
    function f() m public {
    }
}
// ----
// Warning 8429: (19-38): Virtual modifiers are deprecated and scheduled for removal.
// TypeError 3275: (19-38): Modifiers in a library cannot be virtual.
